--- a/.github/workflows/build-macos-intel.yml
+++ b/.github/workflows/build-macos-intel.yml
@@ -8,7 +8,7 @@ on:
 jobs:
      
   build-macos:
-    runs-on: macos-latest
+    runs-on: macos-13
     name: m8c MacOS build (Intel)
     env:
       BUILD_DIR: build-intel
