Simplify the Nix config and add a workflow for it
Got rid of m8c-stable and made m8c-dev the m8c candidate. If ever a user
wants a specific version, they need only use the git tags to get that
specific version. This reduces the complexity of keeping track of hashes
inside of the flake since it always just builds to what code is checked
out.

In simplifying, updated the flake to use CMake, like the workflows for Mac
and Linux do. This should keep things a bit more consistent that way and
reduce one more case of depdending on the Makefile. In order to use
CMake though, I had to add some install rules for the binary. While I
was there I also put a few extra files into appropriate directories -
like documents and the game controller DB file.

Lastly, to make this feel less of a headache for folks, I added a new
job to the ubuntu workflow to build out the project with Nix.

Signed-off-by: K. Adam Christensen <pope@shifteleven.com>

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -12,13 +12,13 @@ on:
 jobs:
  
   build-linux:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     name: linux-x86_64
     steps:
       - name: 'Install dependencies'
         run: |
-          sudo apt-get update
-          sudo apt-get install --fix-missing build-essential libserialport-dev zip git make pkg-config cmake ninja-build gnome-desktop-testing libasound2-dev libpulse-dev libaudio-dev libjack-dev libsndio-dev libx11-dev libxext-dev libxrandr-dev libxcursor-dev libxfixes-dev libxi-dev libxss-dev libxkbcommon-dev libdrm-dev libgbm-dev libgl1-mesa-dev libgles2-mesa-dev libegl1-mesa-dev libdbus-1-dev libibus-1.0-dev libudev-dev libpipewire-0.3-dev libwayland-dev libdecor-0-dev
+          sudo apt-get update -y
+          sudo apt-get install -y --fix-missing build-essential libserialport-dev zip git make pkg-config cmake ninja-build gnome-desktop-testing libasound2-dev libpulse-dev libaudio-dev libjack-dev libsndio-dev libx11-dev libxext-dev libxrandr-dev libxcursor-dev libxfixes-dev libxi-dev libxss-dev libxkbcommon-dev libdrm-dev libgbm-dev libgl1-mesa-dev libgles2-mesa-dev libegl1-mesa-dev libdbus-1-dev libibus-1.0-dev libudev-dev libpipewire-0.3-dev libwayland-dev libdecor-0-dev
 
       - name: 'Checkout'
         uses: actions/checkout@v4
@@ -80,3 +80,27 @@ jobs:
           name: m8c-${{ env.NOW }}-linux-x86_64.AppImage
           path: |
             m8c*.AppImage
+
+  build-linux-with-nix:
+    runs-on: ubuntu-latest
+    name: with-nix-linux-x86_64
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set current date as env variable
+        run: echo "NOW=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+
+      - name: Set up Nix
+        uses: cachix/install-nix-action@v31
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+
+      - name: 'Build binary'
+        run: nix-build
+
+      - name: 'Upload artifact'
+        uses: actions/upload-artifact@v4
+        with:
+          name: m8c-${{ env.NOW }}-with-nix-linux-x86_64
+          path: result
