Fix install path error for applications and icons
Signed-off-by: K. Adam Christensen <pope@shifteleven.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,8 +110,8 @@ if (APPLE)
     include(CPack)
 elseif (UNIX)
     install(TARGETS ${APP_NAME})
-    install(DIRECTORY package/share/applications DESTINATION share/applications)
-    install(DIRECTORY package/share/icons DESTINATION share/icons)
+    install(DIRECTORY package/share/applications DESTINATION share/)
+    install(DIRECTORY package/share/icons DESTINATION share/)
     install(FILES AUDIOGUIDE.md README.md LICENSE DESTINATION share/doc/${APP_NAME})
     install(FILES gamecontrollerdb.txt DESTINATION bin/)
 endif ()
