update macos build runner image

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         include:
           - name: m8c MacOS build (Intel)
-            runner: macos-13
+            runner: macos-15-intel
             build_dir: build-intel
             artifact_suffix: intel
             cmake_arch: x86_64
