update workflow to include rpm spec version bump

--- a/.github/workflows/update-package-versions.yml
+++ b/.github/workflows/update-package-versions.yml
@@ -42,7 +42,7 @@ jobs:
             echo "valid=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Update version in flake.nix
+      - name: Update version in flake.nix and rpm spec
         if: steps.valid-tag.outputs.valid
         run: |
           latest_annotated_tag="${{ steps.newest-tag.outputs.latest_annotated_tag }}"
@@ -50,7 +50,8 @@ jobs:
           sed -i "s/version = \".*\";/version = \"$latest_annotated_tag_without_v\";/" flake.nix
           new_hash=$(nix-prefetch-url --unpack --type sha256 "https://github.com/laamaa/m8c/archive/v$latest_annotated_tag_without_v.tar.gz")  # Use updated variable name
           sed -i "s/hash = \".*\";/hash = \"sha256:$new_hash\";/" flake.nix
+          sed -i "s/^Version:.*$/Version:        $latest_annotated_tag_without_v/" package/rpm/m8c.spec
           git config user.email "github-actions@github.com"
           git config user.name "GitHub Actions"
-          git commit -am "Update version and hash in flake.nix to $latest_annotated_tag_without_v"
+          git commit -am "Update package versions to $latest_annotated_tag_without_v"
           git push origin HEAD:main
